<resources>
    <string name="app_name">Home Test Mobile</string>
    <string name="logo_description">sapo.vn</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="button_next">Next</string>
    <string name="button_signup">Đăng ký</string>
    <string name="city">Thành phố</string>
    <string name="district">Quận huyện</string>
    <string name="sex">Giới tính</string>
    <string name="city_title">Bạn hãy chọn\nTỉnh/Thành nơi bạn ở</string>
    <string name="district_title">Bạn hãy chọn\nQuận/Huyện nơi bạn ở</string>
    <string name="sex_title">Bạn hãy chọn\nĐộ tuổi và giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="other">Khác</string>
    <string name="welcome">Chào mừng bạn\nđến với ứng dụng Sapo</string>
    <string name="msg_error_username">username > 8 ký tự</string>
    <string name="msg_error_email">Chào mừng bạn\nđến với ứng dụng Sapo</string>
    <string name="msg_error_password">password > 8 ký tự. Có chữ hoa, chữ thường, và ký tự đặc biệt</string>
    <string name="msg_error_repeat_password">password phải trùng với password</string>
    <string name="general_title_toolbar">Thông tin chung</string>
    <string name="general_description">Bạn đã chọn</string>

    <string name="general_username">Tên đăng nhập</string>
    <string name="general_email">Email</string>
    <string name="general_sex">Giới tính</string>
    <string name="general_age">Tuổi</string>
    <string name="general_city">Thành phố</string>
    <string name="general_district">Quận huyện</string>
</resources>
