<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rippleEffectColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        style="@style/Toolbar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="?attr/actionBarSize"
            android:gravity="center"
            android:text="@string/sex"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30dp"
        android:gravity="center"
        android:text="@string/sex_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <NumberPicker
        android:id="@+id/nbp_picker_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_70dp"
        android:theme="@style/NumberPick" />

    <RadioGroup
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_70dp"
        android:layout_marginEnd="@dimen/_16dp">

        <RadioButton
            android:textColor="@color/color_white"
            android:checked="true"
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="@dimen/_18sp"/>

        <RadioButton
            android:textColor="@color/color_white"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="@dimen/_18sp"/>

        <RadioButton
            android:textColor="@color/color_white"
            android:id="@+id/rb_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/other"
            android:textSize="@dimen/_18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/_70dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/ripple_button_white"
        android:text="@string/button_next"
        android:textAllCaps="false"
        android:textColor="@color/color_black" />
</LinearLayout>